Toggle menu done!

--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
     <div class="container">
         <header class="cabecalho">
             <img src="./src/img/logo.png" alt="Logo do Sabor Caseiro" class="logo">
-            <nav>
-                <a href="#entradas">Entradas</a>
-                <a href="#pratos">Pratos</a>
-                <a href="#sobremesas">Sobremesas</a>
-                <a href="#informacoes">Informações</a>
+            <nav class="navbar">
+                <input type="checkbox" id="menu-toggle">
+                <label for="menu-toggle" class="menu-icon">&#9776;</label>
+                <div class="navlinks">
+                    <a href="#entradas">Entradas</a>
+                    <a href="#pratos">Pratos</a>
+                    <a href="#sobremesas">Sobremesas</a>    
+                    <a href="#informacoes">Informações</a>
+                </div>
             </nav>
         </header>
         <main>
